--- a/src/html/elements/footer.html
+++ b/src/html/elements/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer__content">
         <div class="footer__container _container">
-                    <div class="footer__contacts contacts">
+                    <!-- <div class="footer__contacts contacts">
                             <div class="contacts__phone">
                                 <h4 class="phone-number title">(000) 000-00-00</h4>
                             </div>
@@ -12,7 +12,18 @@
                     <div class="footer__copyright copyright">.
                         <div class="copyright__text"><span class="coyright__sign">©</span>2019 000 «000» Все права защищены.</div>
                         <div class="copyright__author">Дизайн - sagd.ma</div>
-                    </div>
+                    </div> -->
+                    <nav class="footer__menu">
+                        <div class = "menu">
+                                <div class = "menu__body">
+                                    <ul class = "menu__list">
+                                        <li class="menu__link"><a href="">About</a></li>
+                                        <li class="menu__link"><a href="">Services</a></li>
+                                        <li class="menu__link"><a href="">Projects</a></li>
+                                    </ul>  
+                                </div>
+                            </div>
+                    </nav>
         </div>
     </div>
 </footer>
