--- a/src/html/elements/header.html
+++ b/src/html/elements/header.html
@@ -1,5 +1,8 @@
 <header class="header">
     <div class="header__content">
+        <div class="header__icon-container">
+            <img src="img/logo.svg" alt="" class="header__icon-image">
+        </div>
         @@include('./menu.html')
     </div>
 </header>
