--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Заголовок</title>
+	<title>SunnySide</title>
 	<meta name="description" content="">
 
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
@@ -25,97 +25,95 @@
 
 <body>
 	@@include('html/elements/header.html')
-	We are a full-service creative agency specializing in helping brands grow fast. 
-	Engage your clients through compelling visuals that do most of the marketing for you.
-  
-	Learn more
-  
-	Stand out to the right audience
-  
-	Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-  
-	Learn more
-  
-	Graphic design
-	Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-  
-	Photography
-	Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-  
-	Client testimonials
-  
-	We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-	Emily R.
-	Marketing Director
-  
-	Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-	Thomas S.
-	Chief Operating Officer
-  
-	Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-	Jennie F.
-	Business Owner
-  
-	About
-	Services
-	Projects
-	Contact
 	<main>
 		<div class="main-heading">
 			<div class="main-heading__container">
 			<h1 class="main-heading__title title">We are creatives</h1>
-			<a class="main-heading_btn btn">Transform your brand</a>
+			<a class="main-heading_btn btn"></a>
 			</div>
 		</div>
-		<section class="section introduction _container">
-			<h2 class="section__header title">Section Title</h2>
-			<div class="introduction__information info-block__container info">
+		<section class="section main_content">
+			<div class="main_content info">
 				<div class="info-block">
-					<div class="img-container"><img src="img/img3.jpg" alt="" class="ill"></div>
 					<div class="text-container">
-						<p class="text">Lorem ipsum dolor sit amet consectet nulla eveniet earum unde voluptatibus illo soluta voluptates, minima molestiae a, nemo cupiditate facilis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliqua lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur odit porro ea, saepe, fugiat error impedit iste nulla nemo officiis expedita laborum exercitationem labore voluptatum fugit accusamus, iure vel quam? ad veritatis soluta, commodi deleniti, voluptates inventore optio illo ratione recusandae perferendis harum dolorum at. Recusandae facere voluptatum atque deleniti obis, tempora ipsum architecto fuga error ad delectus distinctio</p>
-					</div>
+						<h3 class="section__header title">Transform your brand</h3>
+						<p class="text">We are a full-service creative agency specializing in helping brands grow fast. 
+							Engage your clients through compelling visuals that do most of the marketing for you.</p>
+					</div>					
+					<div class="img-container"><img src="img/desktop/image-transform.jpg" class="ill"></div>
+					<a class="btn">Learn more</a>
 				</div>
 				<div class="info-block">
-					<div class="img-container"><img src="img/img1.jpg" alt="" class="ill"></div>
+					<div class="img-container"><img src="img/desktop/image-stand-out.jpg" class="ill"></div>
 					<div class="text-container">
-						<p class="text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem, quae. Illum soluta aperiam facilis odio, iste, fugit a quibusdam sequi tenetur non minus! Atque ducimus, corporis eaque a voluptatum voluptas.
-						Et nihil saepe ducimus autem quam cumque accusantium consequuntur perferecipit, eligendi ullam deleniti nostrum sequi excepturi provident, expedita dolorem!
-						</p>
+						<h3 class="section__header title">Stand out to the right audience</h3>
+						<p class="text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
 					</div>
+					<a class="btn">Learn more</a>
 				</div>
 				<div class="info-block">
-					<div class="img-container"><img src="img/img2.jpg" alt="" class="ill"></div>
 					<div class="text-container">
-						<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nesciunt est qui optio numquam praesentium voluptas vitae animi error. Doloribus quae consequuntur natus vel id quisquam possimus adipisci debitis rem.
-						Et quos praesentium veniam sint totam nostrum officiis rem. Tempore aut cum, quo iure eveniet temporibus cupiditate lauditiis et nesciunt, cum maxime eos praesentium fugit? Commodi iusto quidem deserunt nisi.</p>
+						<h3 class="section__header title">Graphic design</h3>
+						<p class="text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+					</div>
+					<div class="text-container">
+						<h3 class="section__header title">Photography</h3>
+						<p class="text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="section main_content">
-			<h2 class="section__header title">Section Title</h2>
-			<div class="main_content info">
+		<section class="section introduction _container">
+			<h2 class="section__header title">Client testimonials</h2>
+			<div class="introduction__information info-block__container info">
 				<div class="info-block">
-					<div class="img-container"><img src="img/img1.jpg" alt="" class="ill"></div>
+					<div class="client-photo"><img src="img/image-emily.jpg" alt="" class="photo"></div>
 					<div class="text-container">
-						<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nesciunt est qui optio numquam praesentium voluptas vitae animi error. Doloribus quae consequuntur natus vel id quisquam possimus adipisci debitis rem.
-						Et quos praesentium veniam sint totam nostrum officiis rem. Tempore aut cum, quo iure eveniet temporibus cupiditate lauditiis et nesciunt, cum maxime eos praesentium fugit? Commodi iusto quidem deserunt nisi.</p>
+						<p class="text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+						<div class="client__name">
+							<p class="text name">Emily R.
+								</p>
+							<p class="position">Marketing Director</p>
+						</div>
 					</div>
 				</div>
 				<div class="info-block">
-					<div class="img-container"><img src="img/img2.jpg" alt="" class="ill"></div>
+					<div class="client-photo"><img src="img/image-thomas.jpg" alt="" class="photo"></div>
 					<div class="text-container">
-						<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nesciunt est qui optio numquam praesentium voluptas vitae animi error. Doloribus quae consequuntur natus vel id quisquam possimus adipisci debitis rem.
-						Et quos praesentium veniam sint totam nostrum officiis rem. Tempore aut cum, quo iure eveniet temporibus cupiditate lauditiis et nesciunt, cum maxime eos praesentium fugit? Commodi iusto quidem deserunt nisi.</p>
+						<p class="text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+						<div class="client__name">
+							<p class="text name">Thomas S.
+								</p>
+							<p class="position">Chief Operating Officer</p>
+						</div>
 					</div>
 				</div>
 				<div class="info-block">
-					<div class="img-container"><img src="img/img3.jpg" alt="" class="ill"></div>
+					<div class="client-photo"><img src="img/image-jennie.jpg" alt="" class="photo"></div>
 					<div class="text-container">
-						<p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nesciunt est qui optio numquam praesentium voluptas vitae animi error. Doloribus quae consequuntur natus vel id quisquam possimus adipisci debitis rem.
-						Et quos praesentium veniam sint totam nostrum officiis rem. Tempore aut cum, quo iure eveniet temporibus cupiditate lauditiis et nesciunt, cum maxime eos praesentium fugit? Commodi iusto quidem deserunt nisi.</p>
+						<p class="text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+						<div class="client__name">
+							<p class="text name">Jennie F.
+								</p>
+							<p class="position">Business Owner</p>
+						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section introduction _container">
+			<div class="introduction__information info-block__container info">
+				<div class="info-block">
+					<div class="img-container"><img src="img/desktop/image-gallery-milkbottles.jpg" alt="" class="ill"></div>
+				</div>
+				<div class="info-block">
+					<div class="img-container"><img src="img/desktop/image-gallery-orange.jpg" alt="" class="ill"></div>
+				</div>
+				<div class="info-block">
+					<div class="img-container"><img src="img/desktop/image-gallery-cone.jpg" alt="" class="ill"></div>
+				</div>
+				<div class="info-block">
+					<div class="img-container"><img src="img/desktop/image-gallery-sugarcubes.jpg" alt="" class="ill"></div>
 				</div>
 			</div>
 		</section>
