--- a/src/html/elements/footer.html
+++ b/src/html/elements/footer.html
@@ -24,6 +24,29 @@
                                 </div>
                             </div>
                     </nav>
+            <div class="footer__container _container">
+                <ul class="socials">
+                    <li class="socials__link">
+                        <a href="/">
+                            <div class="socials__icon"><i class="icon fab fa-facebook-f"></i></div>
+                        </a>
+                    </li>
+                    <li class="socials__link">
+                        <a href="/">
+                            <div class="socials__icon"><i class="icon fab fa-twitter"></i></div>
+                        </a>
+                    </li>
+                    <li class="socials__link">
+                        <a href="/">
+                            <div class="socials__icon"><i class="icon fab fa-instagram"></i></div>
+                        </a>
+                    </li>
+                </ul>
+                <div class="copyright">
+                    <span class='copyright__sign'>&#169</span>
+                    <span class="copyright__text">Copyright Ping All rights reserved</span>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
