--- a/src/index.html
+++ b/src/index.html
@@ -25,101 +25,7 @@
 
 <body>
 	@@include('html/elements/header.html')
-	<main>
-		<div class="main-heading">
-			<div class="main-heading__container">
-			<h1 class="main-heading__title title">We are creatives</h1>
-			<a class="main-heading_btn btn"></a>
-			</div>
-		</div>
-		<section class="section main_content">
-			<div class="main_content info">
-				<div class="info-block">
-					<div class="text-container">
-						<h3 class="section__header title">Transform your brand</h3>
-						<p class="text">We are a full-service creative agency specializing in helping brands grow fast. 
-							Engage your clients through compelling visuals that do most of the marketing for you.</p>
-					</div>					
-					<div class="img-container"><img src="img/desktop/image-transform.jpg" class="ill"></div>
-					<a class="btn">Learn more</a>
-				</div>
-				<div class="info-block">
-					<div class="img-container"><img src="img/desktop/image-stand-out.jpg" class="ill"></div>
-					<div class="text-container">
-						<h3 class="section__header title">Stand out to the right audience</h3>
-						<p class="text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-					</div>
-					<a class="btn">Learn more</a>
-				</div>
-				<div class="info-block">
-					<div class="text-container">
-						<h3 class="section__header title">Graphic design</h3>
-						<p class="text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
-					</div>
-					<div class="text-container">
-						<h3 class="section__header title">Photography</h3>
-						<p class="text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="section introduction _container">
-			<h2 class="section__header title">Client testimonials</h2>
-			<div class="introduction__information info-block__container info">
-				<div class="info-block">
-					<div class="client-photo"><img src="img/image-emily.jpg" alt="" class="photo"></div>
-					<div class="text-container">
-						<p class="text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-						<div class="client__name">
-							<p class="text name">Emily R.
-								</p>
-							<p class="position">Marketing Director</p>
-						</div>
-					</div>
-				</div>
-				<div class="info-block">
-					<div class="client-photo"><img src="img/image-thomas.jpg" alt="" class="photo"></div>
-					<div class="text-container">
-						<p class="text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-						<div class="client__name">
-							<p class="text name">Thomas S.
-								</p>
-							<p class="position">Chief Operating Officer</p>
-						</div>
-					</div>
-				</div>
-				<div class="info-block">
-					<div class="client-photo"><img src="img/image-jennie.jpg" alt="" class="photo"></div>
-					<div class="text-container">
-						<p class="text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-						<div class="client__name">
-							<p class="text name">Jennie F.
-								</p>
-							<p class="position">Business Owner</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="section introduction _container">
-			<div class="introduction__information info-block__container info">
-				<div class="info-block">
-					<div class="img-container"><img src="img/desktop/image-gallery-milkbottles.jpg" alt="" class="ill"></div>
-				</div>
-				<div class="info-block">
-					<div class="img-container"><img src="img/desktop/image-gallery-orange.jpg" alt="" class="ill"></div>
-				</div>
-				<div class="info-block">
-					<div class="img-container"><img src="img/desktop/image-gallery-cone.jpg" alt="" class="ill"></div>
-				</div>
-				<div class="info-block">
-					<div class="img-container"><img src="img/desktop/image-gallery-sugarcubes.jpg" alt="" class="ill"></div>
-				</div>
-			</div>
-		</section>
-	</main>
-	
-
+	@@include('html/elements/main.html')
 	@@include('html/elements/footer.html')
 <script src='js/script.js'></script>
 </body>
