add fonts, pictures, edit main content and footer

--- a/src/html/elements/footer.html
+++ b/src/html/elements/footer.html
@@ -1,51 +1,43 @@
 <footer class="footer">
     <div class="footer__content">
         <div class="footer__container _container">
-                    <!-- <div class="footer__contacts contacts">
-                            <div class="contacts__phone">
-                                <h4 class="phone-number title">(000) 000-00-00</h4>
-                            </div>
-                            <div class="contacts__adress">000000, Санкт-Петербург, Lorem ipsum dolor sit, amet co quos deleniti , 00, корпус 0</div>
-                            <div class="contacts__email">mail@000000.ru</div>
+            <div class="footer__icon-container">
+                <img src="img/logo2.svg" alt="" class="footer__icon-image">
+            </div>
+            <nav class="footer__menu">
+                <div class="menu">
+                    <div class="menu__body">
+                        <ul class="menu__list">
+                            <li class="menu__link"><a href="">About</a></li>
+                            <li class="menu__link"><a href="">Services</a></li>
+                            <li class="menu__link"><a href="">Projects</a></li>
+                        </ul>
                     </div>
-                    <hr class="line">
-                    <div class="footer__copyright copyright">.
-                        <div class="copyright__text"><span class="coyright__sign">©</span>2019 000 «000» Все права защищены.</div>
-                        <div class="copyright__author">Дизайн - sagd.ma</div>
-                    </div> -->
-                    <nav class="footer__menu">
-                        <div class = "menu">
-                                <div class = "menu__body">
-                                    <ul class = "menu__list">
-                                        <li class="menu__link"><a href="">About</a></li>
-                                        <li class="menu__link"><a href="">Services</a></li>
-                                        <li class="menu__link"><a href="">Projects</a></li>
-                                    </ul>  
-                                </div>
-                            </div>
-                    </nav>
+                </div>
+            </nav>
             <div class="footer__container _container">
                 <ul class="socials">
                     <li class="socials__link">
                         <a href="/">
-                            <div class="socials__icon"><i class="icon fab fa-facebook-f"></i></div>
+                            <div class="socials__icon"><img src="img/icon-facebook.svg"></div>
                         </a>
                     </li>
                     <li class="socials__link">
                         <a href="/">
-                            <div class="socials__icon"><i class="icon fab fa-twitter"></i></div>
+                            <div class="socials__icon"><img src="img/icon-instagram.svg"></div>
                         </a>
                     </li>
                     <li class="socials__link">
                         <a href="/">
-                            <div class="socials__icon"><i class="icon fab fa-instagram"></i></div>
+                            <div class="socials__icon"><img src="img/icon-twitter.svg"></div>
+                        </a>
+                    </li>
+                    <li class="socials__link">
+                        <a href="/">
+                            <div class="socials__icon"><img src="img/icon-pinterest.svg"></div>
                         </a>
                     </li>
                 </ul>
-                <div class="copyright">
-                    <span class='copyright__sign'>&#169</span>
-                    <span class="copyright__text">Copyright Ping All rights reserved</span>
-                </div>
             </div>
         </div>
     </div>
