--- a/src/html/elements/main.html
+++ b/src/html/elements/main.html
@@ -1,8 +1,8 @@
 <main>
     <div class="main-heading">
         <div class="main-heading__container">
-        <h1 class="main-heading__title title">We are creatives</h1>
-        <a class="main-heading_btn btn"></a>
+            <h1 class="main-heading__title title">We are creatives</h1>
+            <a class="main-heading_btn btn"></a>
         </div>
     </div>
     <section class="section main_content">
@@ -10,28 +10,32 @@
             <div class="info-block main-block">
                 <div class="text-container">
                     <h3 class="section__header title">Transform your brand</h3>
-                    <p class="text">We are a full-service creative agency specializing in helping brands grow fast. 
+                    <p class="text">We are a full-service creative agency specializing in helping brands grow fast.
                         Engage your clients through compelling visuals that do most of the marketing for you.</p>
-                </div>					
+                    <a class="btn">Learn more</a>
+                </div>
                 <div class="img-container"><img src="img/desktop/image-transform.jpg" class="ill"></div>
-                <a class="btn">Learn more</a>
             </div>
             <div class="info-block main-block">
                 <div class="img-container"><img src="img/desktop/image-stand-out.jpg" class="ill"></div>
                 <div class="text-container">
                     <h3 class="section__header title">Stand out to the right audience</h3>
-                    <p class="text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+                    <p class="text">Using a collaborative formula of designers, researchers, photographers,
+                        videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+                    <a class="btn">Learn more</a>
                 </div>
-                <a class="btn">Learn more</a>
+
             </div>
             <div class="info-block main-block">
                 <div class="text-container">
                     <h3 class="section__header title">Graphic design</h3>
-                    <p class="text">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+                    <p class="text">Great design makes you memorable. We deliver artwork that underscores your brand
+                        message and captures potential clients’ attention.</p>
                 </div>
                 <div class="text-container">
                     <h3 class="section__header title">Photography</h3>
-                    <p class="text">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+                    <p class="text">Increase your credibility by getting the most stunning, high-quality photos that
+                        improve your business image.</p>
                 </div>
             </div>
         </div>
@@ -42,10 +46,11 @@
             <div class="info-block">
                 <div class="client-photo"><img src="img/image-emily.jpg" alt="" class="photo"></div>
                 <div class="text-container">
-                    <p class="text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+                    <p class="text">We put our trust in Sunnyside and they delivered, making sure our needs were met and
+                        deadlines were always hit.</p>
                     <div class="client__name">
                         <p class="text name">Emily R.
-                            </p>
+                        </p>
                         <p class="position">Marketing Director</p>
                     </div>
                 </div>
@@ -53,10 +58,11 @@
             <div class="info-block">
                 <div class="client-photo"><img src="img/image-thomas.jpg" alt="" class="photo"></div>
                 <div class="text-container">
-                    <p class="text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+                    <p class="text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made
+                        it a satisfying and enjoyable experience.</p>
                     <div class="client__name">
                         <p class="text name">Thomas S.
-                            </p>
+                        </p>
                         <p class="position">Chief Operating Officer</p>
                     </div>
                 </div>
@@ -64,20 +70,22 @@
             <div class="info-block">
                 <div class="client-photo"><img src="img/image-jennie.jpg" alt="" class="photo"></div>
                 <div class="text-container">
-                    <p class="text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+                    <p class="text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside.
+                        Highly recommended!</p>
                     <div class="client__name">
                         <p class="text name">Jennie F.
-                            </p>
+                        </p>
                         <p class="position">Business Owner</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section introduction _container">
+    <section class="section introduction">
         <div class="introduction__information info-block__container info">
             <div class="info-block">
-                <div class="img-container"><img src="img/desktop/image-gallery-milkbottles.jpg" alt="" class="ill"></div>
+                <div class="img-container"><img src="img/desktop/image-gallery-milkbottles.jpg" alt="" class="ill">
+                </div>
             </div>
             <div class="info-block">
                 <div class="img-container"><img src="img/desktop/image-gallery-orange.jpg" alt="" class="ill"></div>
