styling clients rewiews section, link buttions, footer

--- a/src/html/elements/main.html
+++ b/src/html/elements/main.html
@@ -22,7 +22,7 @@
                     <h3 class="section__header title">Stand out to the right audience</h3>
                     <p class="text">Using a collaborative formula of designers, researchers, photographers,
                         videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-                    <a class="btn">Learn more</a>
+                    <a class="btn second-btn">Learn more</a>
                 </div>
 
             </div>
@@ -40,61 +40,64 @@
             </div>
         </div>
     </section>
-    <section class="section introduction _container">
-        <h2 class="section__header title">Client testimonials</h2>
+    <section class="section introduction _container reviews">
+        <h2 class="section__header title reviews__title">Client testimonials</h2>
         <div class="introduction__information info-block__container info">
-            <div class="info-block">
-                <div class="client-photo"><img src="img/image-emily.jpg" alt="" class="photo"></div>
+            <div class="info-block reviews__block">
+                <div class="reviews__client-photo-wrapper">
+                <div class="reviews__client-photo"><img src="img/image-emily.jpg" alt="" class="photo"></div></div>
                 <div class="text-container">
-                    <p class="text">We put our trust in Sunnyside and they delivered, making sure our needs were met and
+                    <p class="text reviews__client-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and
                         deadlines were always hit.</p>
-                    <div class="client__name">
+                    <div class="reviews__client-name">
                         <p class="text name">Emily R.
                         </p>
-                        <p class="position">Marketing Director</p>
+                        <p class="reviews__client-position">Marketing Director</p>
                     </div>
                 </div>
             </div>
-            <div class="info-block">
-                <div class="client-photo"><img src="img/image-thomas.jpg" alt="" class="photo"></div>
+            <div class="info-block reviews__block">
+                <div class="reviews__client-photo-wrapper">
+                <div class="reviews__client-photo"><img src="img/image-thomas.jpg" alt="" class="photo"></div></div>
                 <div class="text-container">
-                    <p class="text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made
+                    <p class="text reviews__client-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made
                         it a satisfying and enjoyable experience.</p>
-                    <div class="client__name">
+                    <div class="reviews__client-name">
                         <p class="text name">Thomas S.
                         </p>
-                        <p class="position">Chief Operating Officer</p>
+                        <p class="reviews__client-position">Chief Operating Officer</p>
                     </div>
                 </div>
             </div>
-            <div class="info-block">
-                <div class="client-photo"><img src="img/image-jennie.jpg" alt="" class="photo"></div>
+            <div class="info-block reviews__block">
+                <div class="reviews__client-photo-wrapper">
+                <div class="reviews__client-photo"><img src="img/image-jennie.jpg" alt="" class="photo"></div></div>
                 <div class="text-container">
-                    <p class="text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside.
+                    <p class="text reviews__client-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside.
                         Highly recommended!</p>
-                    <div class="client__name">
+                    <div class="reviews__client-name">
                         <p class="text name">Jennie F.
                         </p>
-                        <p class="position">Business Owner</p>
+                        <p class="reviews__client-position">Business Owner</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section introduction">
-        <div class="introduction__information info-block__container info">
-            <div class="info-block">
-                <div class="img-container"><img src="img/desktop/image-gallery-milkbottles.jpg" alt="" class="ill">
+    <section class="section photo-section">
+        <div class="photo-section__container info-block__container info">
+            <div class="info-block photo-block">
+                <div class="img-container "><img src="img/desktop/image-gallery-milkbottles.jpg" alt="" class="ill">
                 </div>
             </div>
-            <div class="info-block">
-                <div class="img-container"><img src="img/desktop/image-gallery-orange.jpg" alt="" class="ill"></div>
+            <div class="info-block photo-block">
+                <div class="img-container "><img src="img/desktop/image-gallery-orange.jpg" alt="" class="ill"></div>
             </div>
-            <div class="info-block">
-                <div class="img-container"><img src="img/desktop/image-gallery-cone.jpg" alt="" class="ill"></div>
+            <div class="info-block photo-block">
+                <div class="img-container "><img src="img/desktop/image-gallery-cone.jpg" alt="" class="ill"></div>
             </div>
-            <div class="info-block">
-                <div class="img-container"><img src="img/desktop/image-gallery-sugarcubes.jpg" alt="" class="ill"></div>
+            <div class="info-block photo-block">
+                <div class="img-container "><img src="img/desktop/image-gallery-sugarcubes.jpg" alt="" class="ill"></div>
             </div>
         </div>
     </section>
