--- a/src/html/elements/main.html
+++ b/src/html/elements/main.html
@@ -8,7 +8,7 @@
     <section class="section main_content">
         <div class="main_content info">
             <div class="info-block main-block">
-                <div class="img-container"><img src="img/desktop/image-transform.jpg" class="ill"></div>
+                <div class="img-container"><img src="img/desktop/egg.jpg" class="ill"></div>
                 <div class="text-container">
                     <h3 class="section__header title">Transform your brand</h3>
                     <p class="text">We are a full-service creative agency specializing in helping brands grow fast.
@@ -18,7 +18,7 @@
                 
             </div>
             <div class="info-block main-block">
-                <div class="img-container"><img src="img/desktop/image-stand-out.jpg" class="ill"></div>
+                <div class="img-container"><img src="img/desktop/cup.jpg" class="ill"></div>
                 <div class="text-container">
                     <h3 class="section__header title">Stand out to the right audience</h3>
                     <p class="text">Using a collaborative formula of designers, researchers, photographers,
